# d4_dimers

./: .gitignore  .gitmodules  2  README.md  _xyz_from_np  analyze_errors.py  atm.out.bkup  build-mpi4py.sh  charge.py  charged.pkl  charged_system_ids.txt  compare_atm_2b.txt  cross_val.py  d4_test.py  dat.txt  dat.xyz  db.py  dftd3par.ds2  diatomic.txt  diatomic.xyz  env.yml  environment.yaml  fit.out  fit.py  fit_2.py  hive-modules.sh  main.py  molFigs.py  og_main.py  opt.py  opt_2b_tt.sh  outs.txt  plot.py  plot_curve.py  plot_hbc6_supermolecular.py  plot_saptdft.py  pyr.xyz  rational.f90  rscripts.py  rsrc.sh  (+17 more)
d4_tests/: data.txt
images/: open_all.sh
latex_outfiles/: 2B_HF_adz_5f_P.tex  2B_HF_qz_5f_P.tex  ATM_HF_qz_5f_P.tex  D3_HF_adz_5f_P.tex  D3_HF_atz_5f_P.tex  D3_HF_dz_5f_P.tex  D3_HF_jdz_5f_P.tex  D3_HF_tz_5f_P.tex  D3_SAPT0_adz_3_IE_5f_P.tex  D3_SAPT0_atz_3_IE_5f_P.tex  D3_SAPT0_dz_3_IE_5f_P.tex  D3_SAPT0_jdz_3_IE_5f_P.tex  D3_SAPT0_jtz_3_IE_5f_P.tex  D3_SAPT0_mtz_3_IE_5f_P.tex  D3_SAPT0_tz_3_IE_5f_P.tex  D3_fixed_stats.tex  D3_pbe0_adz_saptdft_ndisp_5f_P.tex  D4_2B_C6s_ATM_SAPT0_adz_3_IE_5f_P.tex  D4_2B_C6s_chargedATM_SAPT0_adz_3_IE_5f_P.tex  D4_2B_C6s_unchargedATM_SAPT0_adz_3_IE_5f_P.tex  D4_2B_SAPT0_atz_3_IE_5f_P.tex  D4_2B_SAPT0_dz_3_IE_5f_P.tex  D4_2B_SAPT0_jdz_3_IE_5f_P.tex  D4_2B_SAPT0_mtz_3_IE_5f_P.tex  D4_2B_SAPT0_tz_3_IE_5f_P.tex  D4_ATM_SHARED_SAPT0_adz_3_IE_5f_P.tex  G_HF_adz_5f_P.tex  (+28 more)
src/: og.py  (+26 more)
src/cpp/: CMakeLists.txt  build.sh  disp
src/cpp/include/: CMakeLists.txt  helper.hpp  input.hpp
src/cpp/src/: CMakeLists.txt  disp.cpp  example.cpp  helper.cpp  input.cpp
(+217 files in other folders)
